--- a/composer.json
+++ b/composer.json
@@ -34,8 +34,8 @@
         "php": ">=7.0.0"
     },
     "require-dev": {
-        "mockery/mockery": "^0.9.4",
-        "phpunit/phpunit": "^4.8"
+        "mockery/mockery": "1.0.x-dev",
+        "phpunit/phpunit": "^5.1"
     },
     "autoload": {
         "psr-4": {
